app/plants/static/plants/css/style.css
/* ... */
.bnd-slideshow-arrow-left:hover,
.bnd-slideshow-arrow-right:hover
{
    color:       darkgray;
}
.bnd-slideshow-icon
{
    color:         white;
    display:       inline-block;
    padding-left:  8px;
    padding-right: 8px;
    text-align:    center;
    border:        1px solid #ccc;
    border-radius: 50%;
    height:        13px;
    width:         13px;
    padding:       0;
    cursor:        pointer;
}
.bnd-slideshow-icon:hover
{
    color:            black; 
    background-color: darkgray;
}
/* ------------------------------------------------------------ */
/* Monthyly calendar formatting                                 */
/* ------------------------------------------------------------ */
/* Calendar container */
.bnd-calendar-container 
{
    min-width:   800px;
    margin-top:  32px;
    border:      1px solid darkgray;
    box-shadow:  var(--shadow-parameters);
    font-family: chalkboard, verdana, sans-serif;
}
/* Header styling */
.bnd-calendar-header 
{
    display:          flex;
    justify-content:  space-between;
    align-items:      center;
    padding:          0px;
    background-color: gainsboro;
    color:            black;
}
/* Weekdays and dates styling */
.bnd-calendar-weekdays,
.bnd-calendar-dates 
{
    display:               grid;
    grid-template-columns: repeat(7, 1fr);
    text-align:            left;
}
.bnd-calendar-weekdays div 
{
    padding:          8px;
    font-weight:      bold;
    background-color: whitesmoke;
}
.bnd-calendar-dates div 
{
    padding: 10px;
    border:  1px solid whitesmoke;
}
/* Highlight today's date */
.bnd-calendar-today 
{
    background-color: orange;
    font-weight:      bold;
}
/* ------------------------------------------------------------ */
/* Garden planner formatting                                    */
/* ------------------------------------------------------------ */
/* opacity and zoom sliders */
.slidecontainer {
    width: 200px; /* Width of the outside container */
}
.slider {
    width:         100%;
    height:        15px;
    border-radius: 5px;  
    outline:       none;
    opacity:       0.7;
    transition:    opacity .2s;
}
/* Mouse-over effects */
.slider:hover {
     opacity: 1; /* Fully shown on mouse-over */
}
/* context menu */
.ctxMenu
{
    position:         fixed;
    display:          none;                       /* Hidden by default */
    background-color: #fff;
    border: 1px solid lightgray;
    box-shadow:       var(--shadow-parameters);
    z-index:          1000;                       /* Ensure it's above other elements */
}
.ctxMenuItem 
{
    padding: 8px 12px;
    cursor:  pointer;
}
.ctxMenuItem:hover 
{
    background-color: whitesmoke;
}
.bnd-background-visible
{
    background: none !important; 
}
/* ------------------------------------------------------------ */
/* Page footer                                                  */
/* ------------------------------------------------------------ */
.bnd-page-footer
{
    width:            100%;
    margin-top:       16px;
    padding:          0.01em 0px;
    text-align:       center;
    color:            white;
    background-color: green;
}
/* ------------------------------------------------------------ */
/* */
/* ------------------------------------------------------------ */
@media (max-width:600px)
{
    .bnd-modal-content
    {
        margin: 0 10px;
        width:  auto;
    }
    .bnd-modal
    {
        padding-top: 30px;
    }
    .bnd-hide-small
    {
        display:none;
    }
}
/* ------------------------------------------------------------ */
/* Animation key frames                                         */
/* ------------------------------------------------------------ */
.bnd-animate-left
{
    position:relative;
    animation:animateleft 0.4s
}
@keyframes opac
{
    from{opacity:0} 
    to  {opacity:1}
}
@keyframes animatezoom
{
    from{transform: scale(0)} 
    to  {transform: scale(1)}
}
@keyframes animateleft
{
    from{left:-300px; opacity:0} 
    to  {left:     0; opacity:1}
}
/* ------------------------------------------------------------ */
/* Text formatting                                              */
/* ------------------------------------------------------------ */
/* Font Sizes */
.bnd-tiny     {font-size:10px!important}
.bnd-small    {font-size:12px!important}
.bnd-medium   {font-size:15px!important}
.bnd-large    {font-size:18px!important}
.bnd-xlarge   {font-size:24px!important}
.bnd-xxlarge  {font-size:36px!important}
.bnd-xxxlarge {font-size:48px!important}
.bnd-jumbo    {font-size:64px!important}
/* Font styles */
.bnd-italic   {font-style: italic}
/* Text Colors */
.bnd-text-white     { color:white  }
.bnd-text-red       { color:red    }
.bnd-text-pink      { color:pink   }
.bnd-text-lightpink { color:lightpink }
.bnd-text-orange    { color:orange }
.bnd-text-yellow    { color:yellow }
.bnd-text-green     { color:green  }
.bnd-text-cyan      { color:cyan   }
.bnd-text-blue      { color:blue   }
.bnd-text-violet    { color:violet }
.bnd-text-lavendar  { color:rgba(128, 0, 128, 0.414) }
.bnd-text-purple    { color:purple }
.bnd-text-black     { color:black  }

.bnd-text-outline 
{
    color: #fff; /* Text fill color */
    text-shadow:  1px  1px 0 black, 
                 -1px -1px 0 black, 
                  1px -1px 0 black, 
                 -1px  1px 0 black;
}

/* Background Colors */
.bnd-white       { color:black !important; background-color:#fff    !important }
.bnd-yellow      { color:black !important; background-color:#ffeb3b !important }
.bnd-light-green { color:black !important; background-color:#8bc34a !important }
.bnd-grey        { color:black !important; background-color:gray !important }
.bnd-light-grey  { color:black !important; background-color:#f1f1f1 !important }

.bnd-text-khaki  {color:#b4aa50!important}
/* ... */

